--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml.j2
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml.j2
@@ -7,15 +7,13 @@ finish-args:
   # X11 + XShm access
   - --share=ipc
   - --socket=x11
-  - --socket=fallback-x11
-  - --device=dri
-  # Wayland access
-  - --socket=wayland
+  # Wayland access (disabled because of missing window shadows)
+  # - --socket=wayland
   # Needs network access
   - --share=network
   # Pipewire/Jack
   - --filesystem=xdg-run/pipewire-0
-  - --system-talk-name=org.freedesktop.RealtimeKit1
+  # For setting realtime priority for network thread?
   - --socket=system-bus
 modules:
   - shared-modules/linux-audio/jack2.json
