UI refinement for virtual studio
Add font scaling to overcome small font sizes on macOS.

Grey out left wedge for inactive studios.

Begin process of removing hard coded values in qml files.

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -14,6 +14,7 @@
     <file>Connected.qml</file>
     <file>logo.svg</file>
     <file>wedge.svg</file>
+    <file>wedge_inactive.svg</file>
     <file>private.svg</file>
     <file>public.svg</file>
     <file>join.svg</file>
