VS: New First Launch screen

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -23,6 +23,8 @@
     <file>mic.svg</file>
     <file>headphones.svg</file>
     <file>jacktrip.png</file>
+    <file>JTOriginal.png</file>
+    <file>JTVS.png</file>
     <file>flags/AE.svg</file>
     <file>flags/AU.svg</file>
     <file>flags/BE.svg</file>
