Initial dark mode work
Added dark mode to virtual studio mode.

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -23,6 +23,7 @@
     <file>mic.svg</file>
     <file>headphones.svg</file>
     <file>jacktrip.png</file>
+    <file>jacktrip white.png</file>
     <file>JTOriginal.png</file>
     <file>JTVS.png</file>
     <file>flags/AE.svg</file>
