Begin warnings work

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -22,6 +22,7 @@
     <file>leave.svg</file>
     <file>cog.svg</file>
     <file>mic.svg</file>
+    <file>ethernet.png</file>
     <file>headphones.svg</file>
     <file>jacktrip.png</file>
     <file>jacktrip white.png</file>
