--- a/win/jacktrip.wxs
+++ b/win/jacktrip.wxs
@@ -35,7 +35,7 @@
         </Feature>
 
         <Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Launch JackTrip" />
-        <Property Id="WixShellExecTarget" Value="[#jacktrip.exe]" />
+        <Property Id="WixShellExecTarget" Value="[INSTALLDIR]\jacktrip.exe" />
         <CustomAction Id="LaunchApplication" BinaryKey="WixCA" DllEntry="WixShellExec" Impersonate="yes" />
 
         <WixVariable Id='WixUIDialogBmp' Value='dialog.bmp' />
