Additional UI fixes
Get rid of update stream selection when NO_UPDATER is set.

Change maximum value for broadcast buffer length in GUI.

Some changes specific to @psiborg112's builds

--- a/src/gui/qjacktrip.ui
+++ b/src/gui/qjacktrip.ui
@@ -833,6 +833,9 @@ play from this machine. (Available in client fan out/in and full mix modes.)</st
           <property name="minimum">
            <number>2</number>
           </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
           <property name="value">
            <number>4</number>
           </property>
@@ -1476,6 +1479,12 @@ for better quality at the expense of latency.</string>
           </property>
           <property name="toolTip">
            <string>Set the broadcast queue buffer length, in packet size.</string>
+          </property>
+          <property name="minimum">
+           <number>2</number>
+          </property>
+          <property name="maximum">
+           <number>999</number>
           </property>
           <property name="value">
            <number>8</number>
