--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -11,6 +11,7 @@
     <file>Studio.qml</file>
     <file>Browse.qml</file>
     <file>Settings.qml</file>
+    <file>Meter.qml</file>
     <file>Connected.qml</file>
     <file>Failed.qml</file>
     <file>Setup.qml</file>
