Replace gear icon with open in new window icon

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -21,7 +21,7 @@
     <file>public.svg</file>
     <file>join.svg</file>
     <file>leave.svg</file>
-    <file>cog.svg</file>
+    <file>manage.svg</file>
     <file>mic.svg</file>
     <file>ethernet.png</file>
     <file>ohno.png</file>
