Add gear icon to settings button

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -22,6 +22,7 @@
     <file>join.svg</file>
     <file>leave.svg</file>
     <file>manage.svg</file>
+    <file>cog.svg</file>
     <file>mic.svg</file>
     <file>ethernet.png</file>
     <file>ohno.png</file>
