Add invite button

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -23,6 +23,7 @@
     <file>join.svg</file>
     <file>leave.svg</file>
     <file>manage.svg</file>
+    <file>share.svg</file>
     <file>cog.svg</file>
     <file>mic.svg</file>
     <file>ethernet.png</file>
