Fix studios all filtered out scenario

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -15,6 +15,7 @@
     <file>Connected.qml</file>
     <file>Failed.qml</file>
     <file>Setup.qml</file>
+    <file>SectionHeading.qml</file>
     <file>logo.svg</file>
     <file>wedge.svg</file>
     <file>wedge_inactive.svg</file>
