Mute button on connected

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -27,6 +27,7 @@
     <file>share.svg</file>
     <file>cog.svg</file>
     <file>mic.svg</file>
+    <file>micoff.svg</file>
     <file>ethernet.png</file>
     <file>ohno.png</file>
     <file>headphones.svg</file>
