mic prompt screen + beginning denied screen

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -31,6 +31,7 @@
     <file>ethernet.png</file>
     <file>ohno.png</file>
     <file>headphones.svg</file>
+    <file>Prompt.svg</file>
     <file>network.svg</file>
     <file>jacktrip.png</file>
     <file>jacktrip white.png</file>
