--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml.j2
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml.j2
@@ -46,5 +46,6 @@ modules:
       - -Dprofile=development
     sources:
       - type: git
+        disable-submodules: true
         url: {{ env['REPO'] }}
         branch: {{ env['REF'] }}
