--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -25,6 +25,7 @@
     <file>leave.svg</file>
     <file>manage.svg</file>
     <file>share.svg</file>
+    <file>start.svg</file>
     <file>cog.svg</file>
     <file>mic.svg</file>
     <file>micoff.svg</file>
