--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -33,6 +33,7 @@
     <file>headphones.svg</file>
     <file>Prompt.svg</file>
     <file>network.svg</file>
+    <file>video.svg</file>
     <file>jacktrip.png</file>
     <file>jacktrip white.png</file>
     <file>JTOriginal.png</file>
