--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -29,6 +29,8 @@
     <file>cog.svg</file>
     <file>mic.svg</file>
     <file>micoff.svg</file>
+    <file>quiet.svg</file>
+    <file>loud.svg</file>
     <file>ethernet.png</file>
     <file>ohno.png</file>
     <file>headphones.svg</file>
