add refresh icon to buttons

--- a/src/gui/qjacktrip.qrc
+++ b/src/gui/qjacktrip.qrc
@@ -31,6 +31,7 @@
     <file>micoff.svg</file>
     <file>quiet.svg</file>
     <file>loud.svg</file>
+    <file>refresh.svg</file>
     <file>ethernet.png</file>
     <file>ohno.png</file>
     <file>headphones.svg</file>
